# soup-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/config/: command.rs  mod.rs
src/errors/: mod.rs
